--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <ul> 
             <li><a href="module-1/orozco_module1_3">1.3</a></li>
             <li><a href="module-2/orozco-module2-2">2.2</a></li>
-            <!-- <li><a href="module-3/orozco-module3-3">3.3</a></li> -->
+            <li><a href="module-3/orozco_module3_3">3.3</a></li>
         </ul>
 
         <h3> Projects </h3>
