--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <li><a href="">bioSite Project Home Page</a></li>
         </ul>
 
-        <h4>Important Linksk</h4>
+        <h4>Important Links</h4>
         <ul> 
             <li><a href="https://validator.w3.org/  ">W3C HTML Validator</a></li>
             <li><a href="http://jigsaw.w3.org/css-validator/  ">W3C CSS Validator</a></li>
