made file names consistent

--- a/module-3/orozco-module3-3.html
+++ b/module-3/orozco-module3-3.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <title>“CSD 340 Web Development with HTML and CSS"</title>
-    <link href="orozco_module3_3.css" type="text/css" rel="stylesheet" /> 
+    <link href="orozco-module3-3.css" type="text/css" rel="stylesheet" /> 
     <meta name="description" content="Learning CSS" />
     <meta name="keywords" content="ordered, unordered lists, CSS, introduction, basics" />
     <meta name="robots"
