--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
         <h3> Module Assignments</h3>
         <ul> 
-            <li><a href="module-1/orozco-module1-3">1.3</a></li>
-            <li><a href="module-2/orozco-module2-2">2.2</a></li>
-            <li><a href="module-3/orozco-module3-3">3.3</a></li>
-            <li><a href="module-4/orozco-module4-2">4.2</a></li>
+            <li><a href="module-1/orozco-module1-3.html">1.3</a></li>
+            <li><a href="module-2/orozco-module2-2.html">2.2</a></li>
+            <li><a href="module-3/orozco-module3-3.html">3.3</a></li>
+            <li><a href="module-4/orozco-module4-2.html">4.2</a></li>
         </ul>
 
         <h3> Projects </h3>
