--- a/module-2/orozco-module2-2.html
+++ b/module-2/orozco-module2-2.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <title>“CSD 340 Web Development with HTML and CSS"</title>
-    <link href="orozco-mod2-2.css" type="text/css" rel="stylesheet" /> 
+    <link href="orozco-module2-2.css" type="text/css" rel="stylesheet" /> 
     <meta name="description" content="Learning CSS" />
     <meta name="keywords" content="CSS, introduction, basics" />
     <meta name="robots"
