--- a/module-4/orozco-module4-2.html
+++ b/module-4/orozco-module4-2.html
@@ -15,5 +15,37 @@
 <body>
     <div id=”container”>
         <h1>Assignment 4.2: Build a Web Page Exercise - Part 4</h1>
+
+        <div id="image-gallery">
+            <div class="item">
+                <h3>Amatka</h3>
+                <figure>
+                <img src="images/amatka.jpg" alt="Amatka by Karin Tidbeck">
+                <figcaption>author: Karin Tidbeck</figcaption>
+                </figure>
+            </div>
+
+            <div class="item">
+                <h3>The Children of Men</h3>
+                <figure>
+                <img src="images/children_of_men.jpg" alt="The Children of Men by P.D. James">
+                <figcaption>author: P.D. James</figcaption>
+                </figure>
+            </div>
+
+            <div class="item">
+                <h3>The Best of All Possible Worlds</h3>
+                <figure>
+                <img src="images/best_of_worlds.jpg" alt="The Best of All Possible Worlds by Karen Lord">
+                <figcaption>author: Karen Lord</figcaption>
+                </figure>
+            </div>
+
         </div>
-        </body>
+
+        <div id="footer">
+            <a href="../index.html">Back to Landing Page</a>
+        </div>
+    </div>
+
+</body>
