--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <li><a href="module-2/orozco-module2-2.html">2.2</a></li>
             <li><a href="module-3/orozco-module3-3.html">3.3</a></li>
             <li><a href="module-4/orozco-module4-2.html">4.2</a></li>
+            <li><a href="module-6/orozco-module6-2.html">6.2</a></li>
         </ul>
 
         <h3> Projects </h3>
