--- a/module-6/orozco-module6-2.html
+++ b/module-6/orozco-module6-2.html
@@ -4,13 +4,12 @@
 <head>
     <title>“CSD 340 Web Development with HTML and CSS"</title>
     <link href="orozco-module6-2.css" type="text/css" rel="stylesheet" /> 
-    <meta name="description" content="Learning CSS" />
-    <meta name="keywords" content="positioning, grid layout, CSS, introduction, basics" />
-    <meta name="robots"
-    content="nofollow" />
-    <meta http-equiv="author"
-    content="Rogelio Orozco" />
 </head>
 
 <body>
-    <div id=”container”>
+    <header>
+        <h1>Assignment 6.2 - Building a Web Page - Part 5</h1>
+    </header>
+    
+</body>
+</html>
