module 6-2 create a website featuring card class

--- a/module-6/orozco-module6-2.html
+++ b/module-6/orozco-module6-2.html
@@ -7,9 +7,34 @@
 </head>
 
 <body>
-    <header>
+    <header>   
         <h1>Assignment 6.2 - Building a Web Page - Part 5</h1>
     </header>
+
+    <div id="navbar">
+        <a href="#top">Home</a>
+        <a href="#top">About</a>
+        <a href="#top">Contact</a>
+    </div>
+
+    <div id="container">
+        <div class="card">
+            <div class="card-title">
+                <h3>Top 5 Favorite Foods</h3>
+            </div>
+            <div class="card-content"><ol>
+                <li><a href="https://www.landolakes.com/recipe/10293/grilled-peanut-butter-jelly-sandwich/">PB and J</a></li>
+                <li><a href="https://www.maricruzavalos.com/tamales-de-rajas/">Tamal con Rajas</a></li>
+                <li><a href="https://www.seriouseats.com/tres-leches-cake-recipe">Tres Leches</a></li>
+                <li><a href="https://www.dinneratthezoo.com/szechuan-beef/">Schezuan Beef</a></li>
+                <li><a href="https://foodtasia.com/mangonada/">Chamoyada</a></li> 
+            </ol></div>
+        </div>
+    </div>
+
+    <footer>
+        <p><a href="../index.html">Back to Landing Page</a></p>
+    </footer>
     
 </body>
 </html>
