--- a/module-8/orozco-module8-2.html
+++ b/module-8/orozco-module8-2.html
@@ -106,7 +106,7 @@
    
     <footer>
         <div class="copyright">
-          <span>&copy; 2024 Your Company Name</span>
+          <span>&copy; 2024 Rogelio Orozco</span>
         </div>
         <div class="back-to-landing">
             <a href="../index.html">Back to Landing Page</a>
