created module 9-3 - JavaScript Part 1

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <li><a href="module-3/orozco-module3-3.html">3.3</a></li>
             <li><a href="module-4/orozco-module4-2.html">4.2</a></li>
             <li><a href="module-8/orozco-module8-2.html">8.2</a></li>
+            <li><a href="module-9/orozco-module9-3.html">9.3</a></li>
 
             
         </ul>
