Completed Module 10 - OnClick mouse events.

--- a/index.html
+++ b/index.html
@@ -27,13 +27,14 @@
             <li><a href="module-4/orozco-module4-2.html">4.2</a></li>
             <li><a href="module-8/orozco-module8-2.html">8.2</a></li>
             <li><a href="module-9/orozco-module9-3.html">9.3</a></li>
+            <li><a href="module-10/orozco-module10-3.html">10.3</a></li>
 
             
         </ul>
 
         <h3> Projects </h3>
         <ul> 
-            <li><a href="">bioSite Project Home Page</a></li>
+            <li><a href="../bioSite/biosite-1/index.html">bioSite Project Home Page</a></li>
         </ul>
 
         <h4>Important Links</h4>
