finished module 11-2. Included link in index

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
             <li><a href="module-8/orozco-module8-2.html">8.2</a></li>
             <li><a href="module-9/orozco-module9-3.html">9.3</a></li>
             <li><a href="module-10/orozco-module10-3.html">10.3</a></li>
+            <li><a href="module-11/orozco-module11-2.html">11.2</a></li>
+
+            
 
             
         </ul>
