--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <li><a href="module-9/orozco-module9-3.html">9.3</a></li>
             <li><a href="module-10/orozco-module10-3.html">10.3</a></li>
             <li><a href="module-11/orozco-module11-2.html">11.2</a></li>
+            <li><a href="module-12/orozco-module12-2.html">12.2</a></li>
 
             
 
